// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can stack results 1`] = `

<div class="ais-results">
  <div>
    'objectID': 1
  </div>
  <div>
    'objectID': 2
  </div>
</div>

`;

exports[`can stack results 2`] = `

<div class="ais-results">
  <div>
    'objectID': 1
  </div>
  <div>
    'objectID': 2
  </div>
  <div>
    'objectID': 3
  </div>
  <div>
    'objectID': 4
  </div>
</div>

`;

exports[`renders proper HTML 1`] = `

<div class="ais-results">
  <div>
    'objectID': 1
  </div>
  <div>
    'objectID': 2
  </div>
  <div>
    'objectID': 3
  </div>
  <div>
    'objectID': 4
  </div>
</div>

`;

exports[`should allow to customize root wrapper tag name 1`] = `

<thead class="ais-results">
  <div>
    'objectID': 1
  </div>
  <div>
    'objectID': 2
  </div>
</thead>

`;

exports[`should allow to override result rendering 1`] = `

<div class="ais-results">
  <h2>
    1
  </h2>
  <h2>
    2
  </h2>
</div>

`;

exports[`should be hidden if not results are yielded 1`] = `undefined`;

exports[`should not stack results by default 1`] = `

<div class="ais-results">
  <div>
    'objectID': 1
  </div>
  <div>
    'objectID': 2
  </div>
</div>

`;

exports[`should not stack results by default 2`] = `

<div class="ais-results">
  <div>
    'objectID': 3
  </div>
  <div>
    'objectID': 4
  </div>
</div>

`;
